Fix #trello#698-1-charts-overlap-over-the-feedback

--- a/src/main.css
+++ b/src/main.css
@@ -448,4 +448,5 @@ select + .ui-selectmenu-button { border-radius: 3px !important;}
     font-size: inherit;
     background-color: #2E8836;
     bottom: 100px;
+    z-index: +1000;
 }
